--- a/ContosoUniversity/Web.config
+++ b/ContosoUniversity/Web.config
@@ -5,21 +5,28 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="SchoolContext" connectionString="Data Source=JZHAO7V\SS2012EPXRESS;Initial Catalog=ContosoUniversity1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
-</connectionStrings>
+    <add name="SchoolContext" connectionString="Data Source=RO-JZHAO-7\SQLEXPRESS2014;Initial Catalog=ContosoUniversity;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6" />
+    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
   <runtime>
@@ -49,7 +56,7 @@
   <entityFramework>
     <contexts>
       <context type="ContosoUniversity.DAL.SchoolContext, ContosoUniversity">
-        <databaseInitalizer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />
+        <databaseInitializer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
